# frugaldeepexploration

./: CMakeLists.txt  README.md  fdeep_check.cpp  main.cpp  opencv_trial.cpp
model/: model_creation.py
